--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "repository": "https://github.com/reagent/migrator",
   "author": "Patrick Reagan <patrick@the-reagans.com>",
   "license": "MIT",
+  "scripts": {
+    "lint": "eslint ."
+  },
   "prettier": {
     "singleQuote": true,
     "printWidth": 80,
@@ -15,6 +18,9 @@
   "devDependencies": {
     "@tsconfig/node18": "^1.0.1",
     "@types/node": "^18.11.18",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
+    "eslint": "^8.32.0",
     "typescript": "^4.9.4"
   }
 }
