--- a/package.json
+++ b/package.json
@@ -29,5 +29,9 @@
   "dependencies": {
     "slonik": "^33.0.6",
     "slonik-sql-tag-raw": "^2.0.0"
-  }
+  },
+  "files": [
+    "dist",
+    "README.md"
+  ]
 }
