--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@reagent/logging": "^0.1.0",
     "slonik": "^33.0.6",
     "slonik-sql-tag-raw": "^2.0.0"
   },
